--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "CounterUp"]
 	path = CounterUp
 	url = https://github.com/GedMarc/JWebMP-CounterUp.git
+[submodule "SimpleBar"]
+	path = SimpleBar
+	url = https://github.com/GedMarc/JWebMP-SimpleBar
