--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,11 @@
 
     <name>JQuery Modules</name>
     <description>The root module packager for the finalized or modules with no intention of moving to JPMS</description>
-
+	
+	<profiles>
+		<profile>
+			<id>enable-plugins</id>
+			
     <modules>
         <module>JQueryUI</module>
         <module>BlockUI</module>
@@ -34,4 +38,8 @@
 
         <module>MalihuScrollBar</module>
     </modules>
+			
+		</profile>
+	</profiles>
+
 </project>
