--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.jwebmp.plugins.jquery</groupId>
     <artifactId>jwebmp-plugins-jquery-parent</artifactId>
     <packaging>pom</packaging>
-
+    <version>0.0.0_0-SNAPSHOT</version>
     <name>JQuery Modules</name>
     <description>The root module packager for the finalized or modules with no intention of moving to JPMS</description>
 
