--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,9 @@
 			<module>SimpleBar</module>
 			<module>WayPoints</module>
 			<module>CounterUp</module>
+			<module>JQueryUI</module>
 			
-               <!-- <module>JQueryUI</module>
+               <!-- 
                 <module>BlockUI</module>
                 
                 <module>JQUIDateTimePicker</module>
@@ -40,10 +41,6 @@
                 <module>VerticalTimeline</module>
                 <module>SpectrumColourPicker</module>
                 <module>Toastr</module>
-
-                
-                
-                
 
                 <module>MalihuScrollBar</module>-->
             </modules>
