Updates for version 2

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,6 @@ Thumbs.db
 **/*.factorypath
 **/*.flattened-pom.xml
 **/flatter.pom
-flatter.pom**/*.classpath
+flatter.pom**
+/*.classpath
+**/flatter.pom
